Está-se a encaminhar

--- a/Assignment 2/projeto2-structure/projeto2-parent/pom.xml
+++ b/Assignment 2/projeto2-structure/projeto2-parent/pom.xml
@@ -139,12 +139,13 @@
 			</dependency>
 
 			<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+			<!--
 			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql.connector.java}</version>
 				<scope>provided</scope>
-			</dependency>
+			</dependency> -->
 		</dependencies>
 	</dependencyManagement>
 
