--- a/Assignment 3/IS-3 2/IS-3/pom.xml
+++ b/Assignment 3/IS-3 2/IS-3/pom.xml
@@ -38,6 +38,12 @@
             <version>2.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20190722</version>
+        </dependency>
+
     </dependencies>
 
 </project>
